--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,10 @@ android {
         }
     }
 }
-
+repositories {
+    google()
+    jcenter()
+}
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -33,6 +36,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 
 }
