--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.10.1'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.10.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
+    implementation 'com.android.volley:volley:1.1.1'
 
 
 
