--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".PostItemActivity"></activity>
+        <activity android:name=".MainNav_ToolBar"></activity>
+        <activity android:name=".SearchActivity" />
+        <activity android:name=".UserActivity" />
+        <activity android:name=".PostItemActivity" />
         <activity android:name=".PostDetailActivity" />
         <activity android:name=".NotificationActivity" />
         <activity android:name=".MainActivity">
