--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".TopNavbarDetail"></activity>
-        <activity android:name=".MainNav_ToolBar"></activity>
+        <activity android:name=".SeriesDetailActivity"></activity>
+        <activity android:name=".TopNavbarDetail" />
+        <activity android:name=".MainNav_ToolBar" />
         <activity android:name=".SearchActivity" />
         <activity android:name=".UserActivity" />
         <activity android:name=".PostItemActivity" />
