--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".RegisterActivity">
+        </activity>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ClipPostActivity"></activity>
+        <activity android:name=".ClipPostActivity" />
         <activity android:name=".ReportActivity" />
         <activity android:name=".SeriesDetailActivity" />
         <activity android:name=".TopNavbarDetail" />
@@ -31,9 +33,8 @@
         <activity android:name=".PostItemActivity" />
         <activity android:name=".PostDetailActivity" />
         <activity android:name=".NotificationActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"></activity>
 
-        </activity>
     </application>
 
 </manifest>
