add comment to detail post

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".ClipPostActivity"></activity>
+        <activity android:name=".CommentItem"></activity>
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".ClipPostActivity" />
         <activity android:name=".ReportActivity" />
         <activity android:name=".SeriesDetailActivity" />
         <activity android:name=".TopNavbarDetail" />
@@ -32,7 +27,11 @@
         <activity android:name=".PostDetailActivity" />
         <activity android:name=".NotificationActivity" />
         <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
