--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ repositories {
     jcenter()
 }
 dependencies {
+    compile 'org.apache.httpcomponents:httpmime:4.2.3'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
